fix: correct whitespace in color properties and adjust search bar margin for consistency

--- a/src/components/blog-components/blog/Blog.css
+++ b/src/components/blog-components/blog/Blog.css
@@ -25,7 +25,7 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   transition: transform 0.3s ease-in-out;
-  color:white;
+  color: white;
   padding: 0.9rem;
   display: flex;
   flex-direction: column;
@@ -69,7 +69,7 @@
 }
 
 .blog-card a {
-  color:white;
+  color: white;
   margin: 10px;
   text-align: center;
   text-decoration: none;
@@ -113,6 +113,9 @@ body.dark .blog-card a {
   font-size: 0.6rem;
 }
 
+.search-bar {
+  margin-bottom: 0.5rem;
+}
 
 /* Media Query for Blog Mobile Responsiveness */
 @media (max-width: 768px) {
@@ -149,5 +152,9 @@ body.dark .blog-card a {
   .blog-grid {
     grid-template-columns: 1fr; /* Single column layout on mobile */
     gap: 1rem;
+  }
+
+  .search-bar {
+    margin-bottom: 0.7rem;
   }
 }
